--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Sarabun:wght@700&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body>
 
